# adz

./: .gitlab-ci.yml  README.md  shell.nix  start.sh
node/: Cargo.toml
node/src/: chain_spec.rs  command.rs  service.rs
pallets/adz/: Cargo.toml
pallets/adz/src/: lib.rs  mock.rs  tests.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
