[package]
name = 'parachain-runtime'
authors = ['Anonymous']
description = 'A new Cumulus FRAME-based Substrate Runtime, ready for hacking.'
license = 'Unlicense'
version = '3.0.0'
homepage = 'https://substrate.dev'
repository = 'https://github.com/substrate-developer-hub/substrate-parachain-template'
edition = '2018'
[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
substrate-wasm-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }

[dependencies]
codec = { package = 'parity-scale-codec', version = '2.0.0', default-features = false, features = ['derive']}
scale-info = { version = "1.0", default-features = false, features = ["derive"] }
log = { version = "0.4.14", default-features = false }
serde = { version = '1.0.119', optional = true, features = ['derive'] }

# Local Dependencies
pallet-adz = { path = '../pallets/adz', default-features = false, version = '3.0.0' }

# Substrate Dependencies
## Substrate Primitive Dependencies
sp-api = { git = 'https://github.com/paritytech/substrate', default-features = false , branch = "polkadot-v0.9.16" }
sp-block-builder = { git = 'https://github.com/paritytech/substrate', default-features = false , branch = "polkadot-v0.9.16" }
sp-core = { git = 'https://github.com/paritytech/substrate', default-features = false , branch = "polkadot-v0.9.16" }
sp-consensus-aura = { git = 'https://github.com/paritytech/substrate', default-features = false , branch = "polkadot-v0.9.16" }
sp-inherents = { git = 'https://github.com/paritytech/substrate', default-features = false , branch = "polkadot-v0.9.16" }
sp-io = { git = 'https://github.com/paritytech/substrate', default-features = false , branch = "polkadot-v0.9.16" }
sp-offchain = { git = 'https://github.com/paritytech/substrate', default-features = false , branch = "polkadot-v0.9.16" }
sp-runtime = { git = 'https://github.com/paritytech/substrate', default-features = false , branch = "polkadot-v0.9.16" }
sp-session = { git = 'https://github.com/paritytech/substrate', default-features = false , branch = "polkadot-v0.9.16" }
sp-std = { git = 'https://github.com/paritytech/substrate', default-features = false , branch = "polkadot-v0.9.16" }
sp-transaction-pool = { git = 'https://github.com/paritytech/substrate', default-features = false , branch = "polkadot-v0.9.16" }
sp-version = { git = 'https://github.com/paritytech/substrate', default-features = false , branch = "polkadot-v0.9.16" }

## Substrate FRAME Dependencies
frame-executive = { git = 'https://github.com/paritytech/substrate', default-features = false , branch = "polkadot-v0.9.16" }
frame-benchmarking = { git = 'https://github.com/paritytech/substrate', default-features = false, optional = true , branch = "polkadot-v0.9.16" }
frame-support = { git = 'https://github.com/paritytech/substrate', default-features = false, branch = "polkadot-v0.9.16" }
frame-system = { git = 'https://github.com/paritytech/substrate', default-features = false , branch = "polkadot-v0.9.16" }
frame-system-benchmarking = { git = 'https://github.com/paritytech/substrate', default-features = false, optional = true , branch = "polkadot-v0.9.16" }
frame-system-rpc-runtime-api = { git = 'https://github.com/paritytech/substrate', default-features = false , branch = "polkadot-v0.9.16" }

## Substrate Pallet Dependencies
pallet-aura = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.16" }
pallet-balances = { git = 'https://github.com/paritytech/substrate', default-features = false , branch = "polkadot-v0.9.16" }
pallet-randomness-collective-flip = { git = 'https://github.com/paritytech/substrate', default-features = false , branch = "polkadot-v0.9.16" }
pallet-sudo = { git = 'https://github.com/paritytech/substrate', default-features = false , branch = "polkadot-v0.9.16" }
pallet-timestamp = { git = 'https://github.com/paritytech/substrate', default-features = false , branch = "polkadot-v0.9.16" }
pallet-transaction-payment = { git = 'https://github.com/paritytech/substrate', default-features = false , branch = "polkadot-v0.9.16" }
pallet-transaction-payment-rpc-runtime-api = { git = 'https://github.com/paritytech/substrate', default-features = false , branch = "polkadot-v0.9.16" }

# Cumulus Dependencies
cumulus-pallet-aura-ext = { git = 'https://github.com/paritytech/cumulus', default-features = false , branch = "polkadot-v0.9.16" }
cumulus-pallet-parachain-system = { git = 'https://github.com/paritytech/cumulus', default-features = false , branch = "polkadot-v0.9.16" }
cumulus-pallet-dmp-queue = { git = 'https://github.com/paritytech/cumulus', default-features = false , branch = "polkadot-v0.9.16" }
cumulus-pallet-xcm = { git = 'https://github.com/paritytech/cumulus', default-features = false , branch = "polkadot-v0.9.16" }
cumulus-pallet-xcmp-queue = { git = 'https://github.com/paritytech/cumulus', default-features = false , branch = "polkadot-v0.9.16" }
cumulus-primitives-core = { git = 'https://github.com/paritytech/cumulus', default-features = false , branch = "polkadot-v0.9.16" }
cumulus-primitives-timestamp = { git = 'https://github.com/paritytech/cumulus', default-features = false , branch = "polkadot-v0.9.16" }
cumulus-primitives-utility = { git = 'https://github.com/paritytech/cumulus', default-features = false , branch = "polkadot-v0.9.16" }
parachain-info = { git = 'https://github.com/paritytech/cumulus', default-features = false , branch = "polkadot-v0.9.16" }

# Polkadot Dependencies
polkadot-parachain = { git = 'https://github.com/paritytech/polkadot', default-features = false , branch = "release-v0.9.16" }
xcm = { git = 'https://github.com/paritytech/polkadot', default-features = false , branch = "release-v0.9.16" }
xcm-builder = { git = 'https://github.com/paritytech/polkadot', default-features = false , branch = "release-v0.9.16" }
xcm-executor = { git = 'https://github.com/paritytech/polkadot', default-features = false , branch = "release-v0.9.16" }
pallet-xcm = { git = 'https://github.com/paritytech/polkadot', default-features = false , branch = "release-v0.9.16" }

[features]
default = ['std']
runtime-benchmarks = [
	'sp-runtime/runtime-benchmarks',
	'frame-benchmarking',
	'frame-support/runtime-benchmarks',
	'frame-system-benchmarking',
	'frame-system/runtime-benchmarks',
	'pallet-balances/runtime-benchmarks',
	'pallet-timestamp/runtime-benchmarks',
	'pallet-adz/runtime-benchmarks',
]
std = [
	"codec/std",
	"scale-info/std",
	"serde",
	"log/std",
	"sp-api/std",
	"sp-std/std",
	"sp-io/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-version/std",
	"sp-offchain/std",
	"sp-session/std",
	"sp-block-builder/std",
	"sp-transaction-pool/std",
	"sp-inherents/std",
	"frame-support/std",
	"frame-executive/std",
	"frame-system/std",
	"pallet-balances/std",
	"pallet-randomness-collective-flip/std",
	"pallet-timestamp/std",
	"pallet-sudo/std",
	"pallet-transaction-payment/std",
	"parachain-info/std",
	'pallet-adz/std',
	"cumulus-pallet-aura-ext/std",
	"cumulus-pallet-parachain-system/std",
	"cumulus-pallet-xcmp-queue/std",
	"cumulus-pallet-xcm/std",
	"cumulus-primitives-core/std",
	"cumulus-primitives-timestamp/std",
	"cumulus-primitives-utility/std",
	"xcm/std",
	"xcm-builder/std",
	"xcm-executor/std",
	"pallet-aura/std",
	"sp-consensus-aura/std",
]
