[package]
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
description = 'FRAME pallet template for defining custom runtime logic.'
edition = '2018'
homepage = 'https://substrate.dev'
license = 'Unlicense'
name = 'pallet-adz'
readme = 'README.md'
repository = 'https://github.com/substrate-developer-hub/substrate-node-template/'
version = '3.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
# external dependencies
codec = { package = 'parity-scale-codec', version = '2.0.0', default-features = false, features = ['derive'] }
scale-info = { version = '1.0', default-features = false, features = ['derive'] }
sp-std = { git = 'https://github.com/paritytech/substrate', default-features = false , branch = "polkadot-v0.9.16" }
sp-arithmetic = { git = 'https://github.com/paritytech/substrate', default-features = false , branch = "polkadot-v0.9.16" }
sp-runtime = { git = 'https://github.com/paritytech/substrate', default-features = false , branch = "polkadot-v0.9.16" }
pallet-timestamp = { git = 'https://github.com/paritytech/substrate', default-features = false , branch = "polkadot-v0.9.16" }

# Substrate dependencies
frame-benchmarking = { git = 'https://github.com/paritytech/substrate', default-features = false, optional = true , branch = "polkadot-v0.9.16" }
frame-support = { git = 'https://github.com/paritytech/substrate', default-features = false , branch = "polkadot-v0.9.16" }
frame-system = { git = 'https://github.com/paritytech/substrate', default-features = false , branch = "polkadot-v0.9.16" }

[dev-dependencies]
sp-core = { git = 'https://github.com/paritytech/substrate', default-features = false , branch = "polkadot-v0.9.16" }
sp-io = { git = 'https://github.com/paritytech/substrate', default-features = false , branch = "polkadot-v0.9.16" }
sp-runtime = { git = 'https://github.com/paritytech/substrate', default-features = false , branch = "polkadot-v0.9.16" }
pallet-balances = { git = 'https://github.com/paritytech/substrate', default-features = false , branch = "polkadot-v0.9.16" }
pallet-timestamp = { git = 'https://github.com/paritytech/substrate', default-features = false , branch = "polkadot-v0.9.16" }


[features]
default = ['std']
runtime-benchmarks = ['frame-benchmarking']
std = [
	'codec/std',
	'scale-info/std',
	'sp-std/std',
	'sp-arithmetic/std',
	'sp-runtime/std',
	'pallet-timestamp/std',
	'frame-support/std',
	'frame-system/std',
	'frame-benchmarking/std',
]
try-runtime = ['frame-support/try-runtime']
